--- a/a.html
+++ b/a.html
@@ -9,12 +9,10 @@
 </head>
 <body>
 <div class="wrapper">
-    <header>
-    </header>
+    <header></header>
     <div class="col-1"></div>
     <div class="col-2"></div>
-    <footer>
-    </footer>
+    <footer></footer>
 </div>
 <style>
     .wrapper {
