--- a/buoi2.html
+++ b/buoi2.html
@@ -129,6 +129,7 @@
         </div>
        <div>
            <div class="card-content">
+               <button class="close-button">✕</button>
                <h2 class="card-title">Rot Mitt</h2>
                <p class="card-description">Consequuntur est accusantium et nemo. Similique quo atque ut eligendi aspernatur modi ut nemo dolorem.</p>
                <p class="card-description">Quod suscipit et sapiente et explicabo itaque molestiae laudantium architecto.</p>
