--- a/buoi2.html
+++ b/buoi2.html
@@ -106,7 +106,7 @@
         </div>
 
         <div class="remember-me">
-            <input type="checkbox" id="remember-me">
+            <input type="checkbox" class="check" id="remember-me">
             <label for="remember-me">Remember me</label>
         </div>
 
