--- a/buoi2.html
+++ b/buoi2.html
@@ -127,7 +127,7 @@
         <div class="card-header">
             <img src="https://s3-alpha-sig.figma.com/img/6da2/7f2e/4b040796fe4a0915ef9149495e4ae40c?Expires=1728864000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=bJLkkDZytRHlm56GQwg4gX7kEAy65fXNu9rru~kJziUWicdevJ8bkOp~Lf0GXjJ38fb1RKVvsJWoDpNYHdDG08-FGY-a0WXQezp9xCJxy-D2IF9vkfeoOO37kljjYJRAq~CPXpqBsXyzz10QOb3pBorzekj1PDx0SNO4IhDpVaLXX-F0vkLZZ~t03Y0BQOdWY9pFSuiz1lcs8YOpWwqCwk2S2UNDp3UPh2sEp7O5TM2gS-8AR-5Nez6cpXWTFu8sPzDV1fXDY5sQYsLF5JRpbERINu8fd5-XYp7uGJX4UhPp6919rFJ2EtRL3e2Yz6z~fbVJje-Kzs-S1l6xEFtdVg__" alt="Profile Image" class="profile-img">
         </div>
-       <div>
+       <div class="hihi">
            <div class="card-content">
                <button class="close-button">✕</button>
                <h2 class="card-title">Rot Mitt</h2>
