--- a/buoi3.html
+++ b/buoi3.html
@@ -25,7 +25,7 @@
 </div>
 <div class="happenstance">
     <div class="anh">
-        <img src="images/giay.svg" width="1107px" height="941px" alt="">
+        <img src="images/giay.svg" alt="">
     </div>
     <nav class="navbar">
         <div class="navbar-left">
