--- a/buoi3.html
+++ b/buoi3.html
@@ -7,22 +7,7 @@
     <link rel="stylesheet" href="buoi3.css">
 </head>
 <body>
-<div class="container">
-    <div class="item red">1</div>
-    <div class="item blue"></div>
-    <div class="item red">2</div>
-    <div class="item blue"></div>
-    <div class="item red">3</div>
-    <div class="item blue"></div>
-</div>
-<div>
-    <div class="circle">
-        <div class="shape top"></div>
-        <div class="shape left"></div>
-        <div class="shape right"></div>
-        <div class="shape bottom"></div>
-    </div>
-</div>
+
 <div class="happenstance">
     <div class="image">
         <img src="images/giay.svg" alt="">
@@ -103,28 +88,17 @@
             <div class="prev">
                 <span>PREV</span>
                 <br>
-                <svg width="59" height="12" viewBox="0 0 59 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <line x1="59" y1="6" x2="5" y2="6" stroke="black" stroke-width="2"/>
-                    <path d="M6 3.8147e-06L6 12L-5.24537e-07 6L6 3.8147e-06Z" fill="black"/>
-                </svg>
+              <img src="images/prev.svg" alt="">
             </div>
             <div class=next>
                 <span>NEXT</span>
                 <br>
-                <svg width="59" height="12" viewBox="0 0 59 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <line y1="6" x2="54" y2="6" stroke="black" stroke-width="2"/>
-                    <path d="M53 12V0L59 6L53 12Z" fill="black"/>
-                </svg>
+               <img src="images/next.svg" alt="">
                 <br>
             </div>
         </div>
         <div class="play-video">
-            <svg width="56" height="56" viewBox="0 0 56 56" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <rect width="56" height="56" rx="28" fill="#131212" fill-opacity="0.05"/>
-                <path opacity="0.5" fill-rule="evenodd" clip-rule="evenodd"
-                      d="M23 21.8589C23 20.6497 24.3574 19.9375 25.3524 20.6247L35.0769 27.3407C35.9762 27.9618 35.9308 29.3051 34.9916 29.864L25.2671 35.6509C24.2672 36.2459 23 35.5254 23 34.3619V21.8589Z"
-                      fill="#131212"/>
-            </svg>
+            <img src="images/video.svg" alt="">
             <div class="video">PLAY VIDEO</div>
         </div>
         <div class="add-to-cart">
