--- a/grid-lesson-3.html
+++ b/grid-lesson-3.html
@@ -1,22 +1,20 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grid Layout Example</title>
-    <link rel="stylesheet" href="buoi3.css">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" href="grid-lesson-3.css">
 </head>
 <body>
-
-<div class="happenstance">
-    <div class="image">
-        <img src="images/giay.svg" alt="">
-    </div>
-    <nav class="navbar">
-        <div class="navbar-left">
+<div class="container">
+    <div class="content">
+        <div class="item_1 item">
             <img src="./galey.png" width="236px" height="132px" alt="">
         </div>
-        <div>
+        <div class="item_2 item">
             <ul>
                 <li><a href="#">NEW RELEASES</a></li>
                 <li><a href="#">MEN</a></li>
@@ -24,23 +22,11 @@
                 <li><a href="#">HAPS STORIES</a></li>
             </ul>
         </div>
-        <div class="navbar-right">
-            <div class="icon">
-                <img src="images/user.svg" alt="">
-                <img src="images/cart.svg" alt="">
-            </div>
+        <div class="item_3 item">
+            <img src="images/user.svg" alt="">
+            <img src="images/cart.svg" alt="">
         </div>
-    </nav>
-    <main>
-        <div class="scroll">
-            <span>SCROLL DOWN</span>
-        </div>
-        <div class="social">
-            <img src="images/ins.svg" alt="">
-            <img src="images/tw.svg" alt="">
-            <img src="images/face.svg" alt="">
-        </div>
-        <div class="flexible">
+        <div class="item_4 item">
             <div class="select">
                 <div class="select-size">
                     <div>
@@ -70,6 +56,9 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="item_5 item"></div>
+        <div class="item_6 item">
             <div class="men-sandals">
                 <span class="men">MEN'S SANDALS</span>
                 <br>
@@ -80,28 +69,31 @@
                 </span>
             </div>
         </div>
-
-    </main>
-    <div class="footer">
-        <div class="pre-next">
-            <div class="prev">
-                <span>PREV</span>
-                <br>
-              <img src="images/prev.svg" alt="">
-            </div>
-            <div class=next>
-                <span>NEXT</span>
-                <br>
-               <img src="images/next.svg" alt="">
-                <br>
+        <div class="item_7 item">
+            <div class="pre-next">
+                <div class="prev">
+                    <span>PREV</span>
+                    <br>
+                    <img src="images/prev.svg" alt="">
+                </div>
+                <div class=next>
+                    <span>NEXT</span>
+                    <br>
+                    <img src="images/next.svg" alt="">
+                    <br>
+                </div>
             </div>
         </div>
-        <div class="play-video">
-            <img src="images/video.svg" alt="">
-            <div class="video">PLAY VIDEO</div>
+        <div class="item_8 item">
+            <div class="play-video">
+                <img src="images/video.svg" alt="">
+                <div class="video">PLAY VIDEO</div>
+            </div>
         </div>
-        <div class="add-to-cart">
-            <span>ADD TO CART — ₹1599 </span>
+        <div class="item_9 item">
+            <div class="add-to-cart">
+                <span>ADD TO CART — ₹1599 </span>
+            </div>
         </div>
     </div>
 </div>
