commit grid code

--- a/grid-lesson-3.html
+++ b/grid-lesson-3.html
@@ -10,6 +10,17 @@
 </head>
 <body>
 <div class="container">
+    <div class="image">
+        <img src="images/giay.svg" alt="">
+    </div>
+    <div class="scroll">
+        <span>SCROLL DOWN</span>
+    </div>
+    <div class="social">
+        <img src="images/ins.svg" alt="">
+        <img src="images/tw.svg" alt="">
+        <img src="images/face.svg" alt="">
+    </div>
     <div class="content">
         <div class="item_1 item">
             <img src="./galey.png" width="236px" height="132px" alt="">
