--- a/grid-lesson-3.html
+++ b/grid-lesson-3.html
@@ -13,9 +13,7 @@
     <div class="image">
         <img src="images/giay.svg" alt="">
     </div>
-    <div class="scroll">
-        <span>SCROLL DOWN</span>
-    </div>
+    <div class="scroll"></div>
     <div class="social">
         <img src="images/ins.svg" alt="">
         <img src="images/tw.svg" alt="">
@@ -71,11 +69,11 @@
         <div class="item_5 item"></div>
         <div class="item_6 item">
             <div class="men-sandals">
-                <span class="men">MEN'S SANDALS</span>
+                <span>MEN'S SANDALS</span>
                 <br>
                 <span class="label-sandals">HULK - TOFFEE</span>
                 <br>
-                <span class="description-sandals">
+                <span>
                     Add a spring to your step with this elegant and sleek pair of footwear! With its heavily padded ankle straps for secure footing and matted steel buckles that add flair, support and style go hand in hand with these hunk sandals
                 </span>
             </div>
