--- a/grid-lesson-3.html
+++ b/grid-lesson-3.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Grid Layout</title>
     <link rel="stylesheet" href="grid-lesson-3.css">
 </head>
 <body>
@@ -20,10 +20,10 @@
         <img src="images/face.svg" alt="">
     </div>
     <div class="content">
-        <div class="item_1 item">
+        <div class="item">
             <img src="./galey.png" width="236px" height="132px" alt="">
         </div>
-        <div class="item_2 item">
+        <div class="item">
             <ul>
                 <li><a href="#">NEW RELEASES</a></li>
                 <li><a href="#">MEN</a></li>
@@ -31,11 +31,11 @@
                 <li><a href="#">HAPS STORIES</a></li>
             </ul>
         </div>
-        <div class="item_3 item">
+        <div class="item">
             <img src="images/user.svg" alt="">
             <img src="images/cart.svg" alt="">
         </div>
-        <div class="item_4 item">
+        <div class="item">
             <div class="select">
                 <div class="select-size">
                     <div>
@@ -66,8 +66,8 @@
                 </div>
             </div>
         </div>
-        <div class="item_5 item"></div>
-        <div class="item_6 item">
+        <div class="item"></div>
+        <div class="item">
             <div class="men-sandals">
                 <span>MEN'S SANDALS</span>
                 <br>
@@ -78,7 +78,7 @@
                 </span>
             </div>
         </div>
-        <div class="item_7 item">
+        <div class="item">
             <div class="pre-next">
                 <div class="prev">
                     <span>PREV</span>
@@ -93,13 +93,13 @@
                 </div>
             </div>
         </div>
-        <div class="item_8 item">
+        <div class="item">
             <div class="play-video">
                 <img src="images/video.svg" alt="">
                 <div class="video">PLAY VIDEO</div>
             </div>
         </div>
-        <div class="item_9 item">
+        <div class="item">
             <div class="add-to-cart">
                 <span>ADD TO CART — ₹1599 </span>
             </div>
