--- a/four_lesson/index.html
+++ b/four_lesson/index.html
@@ -120,6 +120,7 @@
                     “Lusto iure id ad. Doloremque et molestiae perspiciatis quis voluptas ut sed. Omnis praesentium doloremque ipsa eveniet. Itaque aut ea accusantium error impedit impedit. Minima quisquam fuga sed maxime vitae non fuga. Quo asperiores ut autem unde mollitia.”
                 </span>
             </div>
+            <div>Lorem Ipsum</div>
         </div>
         <div class="item item_11">
             <span>Our values stem from the following four roots:</span>
@@ -158,7 +159,20 @@
                 quisquam fuga sed maxime vitae non fuga.
             </p>
         </div>
-        <div class="item item_20"></div>
+        <div class="item item_20">
+            <div class="position">
+                <div>
+                    <img src="./image/position.svg" alt="">
+                </div>
+                <div>
+                    <span>See our open positions</span>
+                    <p>Our personnel policy is to create the most international workforce possible and weld it together as a team.</p>
+                </div>
+                <div>
+                    <button>See jobs</button>
+                </div>
+            </div>
+        </div>
         <div class="item item_21">
             <img src="image/your-brand.svg" alt=""><br>
             <span>
