change when zoom footer

--- a/lesson5.html
+++ b/lesson5.html
@@ -313,11 +313,13 @@
                 </div>
             </div>
         </div>
-        <footer>
+    </div>
+    <footer>
+        <div class="footer-wrapper">
             <div class="footer-li">
                 <div class="flexible">
                     <img src="./image/yourbrand.svg" alt="">
-                    <p>Corporis ut aliquid qui molestiae. Sed laborum<br> sunt recusandae animi dolore voluptates. </p>
+                    <p>Corporis ut aliquid qui molestiae. Sed laborum<br> sunt recusandae animi dolore voluptates.</p>
                     <img src="image/facebook.svg" alt="">
                     <img src="image/twitter.svg" alt="">
                     <img src="image/instagram.svg" alt="">
@@ -353,8 +355,8 @@
                     </ul>
                 </div>
             </div>
-        </footer>
-    </div>
+        </div>
+    </footer>
 </div>
 </body>
 </html>
